--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ jdk: oraclejdk8
 
 # Improve Build Speed https://dzone.com/articles/travis-ci-tutorial-java-projects
 
-# env:
+env:
     #- MAVEN_VERSION=3.2.5
-#    - MAVEN_VERSION=3.3.9
-# install:
-#    - "mvn -N io.takari:maven:wrapper -Dmaven=${MAVEN_VERSION}"
-#    - "./mvnw --show-version --errors --batch-mode test-compile dependency:go-offline"
-# script: "./mvnw --show-version --errors --batch-mode -Prun-its clean verify"
+    - MAVEN_VERSION=3.3.9
+install:
+    - "mvn -N io.takari:maven:wrapper -Dmaven=${MAVEN_VERSION}"
+    - "./mvnw --show-version --errors --batch-mode test-compile dependency:go-offline"
+script: "./mvnw --show-version --errors --batch-mode -Prun-its clean verify"
 
 cache:
   directories:
