--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.datasource.password=footballgamble
 # ===============================
  
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -29,6 +30,7 @@ spring.mvc.locale-resolver=fixed
 # TOMCAT
 # ===============================
 server.port = 8088
+#server.servlet.context-path= /SpringBootRestApi
 server.error.include-stacktrace=always
 
 # ===============================
