Fixed timeout error on getting data from API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,12 +26,15 @@ spring.jpa.open-in-view=false
 spring.mvc.locale=ru
 spring.mvc.locale-resolver=fixed
 
+spring.mvc.async.request-timeout=10000
+
 # ===============================
 # TOMCAT
 # ===============================
 server.port = 8087
 #server.servlet.context-path= /SpringBootRestApi
 server.error.include-stacktrace=always
+#server.connection-timeout=-1
 
 # ===============================
 # APP
