--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 # ===============================
 # DATABASE
 # ===============================
- 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-!spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vetal?autoReconnect=true&useSSL=false
 spring.datasource.url=jdbc:mysql://footballgamble.cu4zm1grealp.eu-west-3.rds.amazonaws.com/footballgamble?autoReconnect=true&useSSL=false
 
 spring.datasource.username=footballgamble
@@ -19,10 +17,18 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-
-spring.http.encoding.charset=UTF-8
 spring.jpa.open-in-view=false
 
+ 
+# ===============================
+# SPRING
+# ===============================
+#spring.profiles.active=@activeProfile@
+
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+#
+spring.http.encoding.charset=UTF-8
 spring.mvc.locale=ru
 spring.mvc.locale-resolver=fixed
 
