--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,9 @@
-# ===============================
-# DATABASE
-# ===============================
- 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-!spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vetal?autoReconnect=true&useSSL=false
-spring.datasource.url=jdbc:mysql://footballgamble.cu4zm1grealp.eu-west-3.rds.amazonaws.com/footballgamble?autoReconnect=true&useSSL=false
+spring.profiles.active=dev
 
-spring.datasource.username=footballgamble
-spring.datasource.password=footballgamble
- 
-# ===============================
-# JPA / HIBERNATE
-# ===============================
- 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#spring.main.allow-bean-definition-overriding=true
 
 spring.http.encoding.charset=UTF-8
-spring.jpa.open-in-view=false
+#spring.jpa.open-in-view=false
 
 spring.mvc.locale=ru
 spring.mvc.locale-resolver=fixed
@@ -31,13 +13,30 @@ spring.mvc.async.request-timeout=10000
 # ===============================
 # TOMCAT
 # ===============================
-server.port = 8087
-#server.servlet.context-path= /SpringBootRestApi
+server.port = 8088
+#server.servlet.context-path= /FootballRestApi
 server.error.include-stacktrace=always
 #server.connection-timeout=-1
+
+# ----------------------------------------
+# CORE PROPERTIES
+# ----------------------------------------
+# Enable debug logs.
+#debug=false
+# Enable trace logs.
+#trace=false 
 
 # ===============================
 # APP
 # ===============================
 !For get data from site X-Auth-Token = fe8f1920b855444fb9bbca24f9a1f03d
-footballdata.token = fe8f1920b855444fb9bbca24f9a1f03d 
+footballdata.token = fe8f1920b855444fb9bbca24f9a1f03d
+#indicates the version you are using 
+footballdata.response.headers.api_version=X-API-Version
+#Shows the detected API-client or 'anonymous'
+footballdata.response.headers.api_authenticated_client=X-Authenticated-Client
+#Defines the seconds left to reset your request counter.
+footballdata.response.headers.second_left_to_reset=X-RequestCounter-Reset
+#Shows the remaining requests before being blocked.
+footballdata.response.headers.remaining_requests=X-Requests-Available-Minute
+
