--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,12 +6,15 @@
 amazon.dynamodb.endpoint=dynamodb.eu-west-3.amazonaws.com
 amazon.dynamodb.region="eu-west-3"
 
+java.home=${JAVA_HOME}
 
 #amazon.dynamodb.accesskey=${AWS_ACCESS_KEY_ID}
 #amazon.dynamodb.secretkey=${AWS_SECRET_KEY}
+amazon.dynamodb.accesskey=${JAVA_HOME}
+amazon.dynamodb.secretkey=${JAVA_HOME}
 
-amazon.aws.accesskey=AKIASC7HBT3I4MDZ7VHK
-amazon.aws.secretkey=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
+#amazon.aws.accesskey=
+#amazon.aws.secretkey=
 
 
 #spring.main.allow-bean-definition-overriding=true
