--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,10 +8,10 @@ amazon.dynamodb.region="eu-west-3"
 
 java.home=${JAVA_HOME}
 
-#amazon.dynamodb.accesskey=${AWS_ACCESS_KEY_ID}
-#amazon.dynamodb.secretkey=${AWS_SECRET_KEY}
-amazon.dynamodb.accesskey=${JAVA_HOME}
-amazon.dynamodb.secretkey=${JAVA_HOME}
+amazon.dynamodb.accesskey=${AWS_ACCESS_KEY_ID}
+amazon.dynamodb.secretkey=${AWS_SECRET_KEY}
+#amazon.dynamodb.accesskey=${JAVA_HOME}
+#amazon.dynamodb.secretkey=${JAVA_HOME}
 
 #amazon.aws.accesskey=
 #amazon.aws.secretkey=
