Fixed DB connection

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,15 +6,14 @@
 amazon.dynamodb.endpoint=dynamodb.eu-west-3.amazonaws.com
 amazon.dynamodb.region="eu-west-3"
 
-java.home=${JAVA_HOME}
+#amazon.dynamodb.accesskey=${AWS_ACCESS_KEY_ID}
+#amazon.dynamodb.secretkey=${AWS_SECRET_KEY}
 
-amazon.dynamodb.accesskey=${AWS_ACCESS_KEY_ID}
-amazon.dynamodb.secretkey=${AWS_SECRET_KEY}
-#amazon.dynamodb.accesskey=${JAVA_HOME}
-#amazon.dynamodb.secretkey=${JAVA_HOME}
+amazon.dynamodb.accesskey=${DYNAMO_DB_ACCESS_KEY_ID}
+amazon.dynamodb.secretkey=${DYNAMO_DB_SECRET_KEY}
 
 #amazon.aws.accesskey=
 #amazon.aws.secretkey=
 
-
 #spring.main.allow-bean-definition-overriding=true
+
